K8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: your-django-service
spec:
  selector:
    app: your-django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
  type: LoadBalancer
