K8/all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: your-django-app
  template:
    metadata:
      labels:
        app: your-django-app
    spec:
      containers:
      - name: django-app
        image: dj:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /app/secrets.json
          name: secrets-volume
        ports:
        - containerPort: 7000
      volumes:
      - name: secrets-volume
        hostPath:
          path: /home/irwinrex/Documents/testIrwin/secrets_old.json  # Update this path accordingly


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: djnginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: your-django-service
spec:
  selector:
    app: your-django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-django-ingress
spec:
  rules:
  - host: your-django-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-django-service
            port:
              number: 80
